--- a/src/pages/designer/designer.less
+++ b/src/pages/designer/designer.less
@@ -7,27 +7,33 @@
 .change-btn-box {
     width: 600px;
 }
+
 .UV-mix-wrap {
     width: 100vw;
+
     .face-config-bar {
         width: @btnWidth;
         text-align: center;
+
         .design-img-box {
             margin-left: 10px; 
             width: 80px;
             height: 80px;
         }
+
         .face-id-box {
             margin: 10px; 
             .border-dashed(#fff);
             padding: 5px;
+            cursor: pointer;
         }
+
         .face-id-box.selected,
         .face-id-box:hover {
-            
-            .border-dashed(green);
+            .border-dashed(@mainColor);
         }
     }
+
     .show-UV-bar {
         padding: 20px;
         height: calc(100vw - @totalWidth);
@@ -35,10 +41,12 @@
         min-height: 500px;
         background: #e8e8e8;
         flex: 1;
+
         .set-UV-box {
             .border-dashed(red);
             height: 100%;
             background: #fff;
+
             canvas {
                 position: absolute;
                 top: 0;
@@ -46,6 +54,7 @@
             }
         }
     }
+
     .oprate-bar {
         width: @opeWidth;
     }
