--- a/src/pages/designer/designer.less
+++ b/src/pages/designer/designer.less
@@ -47,10 +47,17 @@
             height: 100%;
             background: #fff;
 
-            canvas {
-                position: absolute;
-                top: 0;
-                left: 0;
+            .canvas-container{
+                margin: 0 auto;
+                position: absolute !important;
+                width: 100% !important;
+                height: 100% !important;
+
+                .lower-canvas,
+                .upper-canvas {
+                    width: 100% !important;
+                    height: 100% !important;
+                }
             }
         }
     }
